FIxed Mobile View
Added Scroll bar to description for game
Fixed mobile view

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <div class="header-row">
       <div class="header-text">
         <h1>Hi. I'm Jason Chen.</h1>
-        <p>I'm a student game developer, specializing in game programming<br><br>
-           Check out the projects I have worked on below and feel free to<br>
+        <p>I'm a student game developer, specializing in game programming.
+           Check out the projects I have worked on below and feel free to
            contact me if you would like to collaborate on a project !!
         </p>
       </div>
