Text Spacing + Scrolling
Fixed Text spacing for some paragraphs
Fixed location of close game description button

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <div class="header-text">
         <h1>Hi. I'm Jason Chen.</h1>
         <p>I'm a student game developer, specializing in game programming.
+          <br><br>
            Check out the projects I have worked on below and feel free to
            contact me if you would like to collaborate on a project !!
         </p>
@@ -117,7 +118,7 @@
               UI/UX for the main combat screen. This was one of my first projects where I was not the sole programmer, which taught me 
               the challenges of merging code and ways to fix it. 
               <br><br> 
-              This game was made for the Clark University IGDA's 48 Hour<br>Feburary 2024 Game Jam with a theme of 'Retro'.
+              This game was made for the Clark University IGDA's 48 Hour Feburary 2024 Game Jam with a theme of 'Retro'.
             </p>
             <img alt="more-info" src="images/circle-x.png" onclick="closemoreinfo('bellicose', 'bellicose-info')">  
           </div>
