index.html + styles.css changes
Changed wording and added background to 'Tools Used'

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <span class="label programmer">Programmer</span>
             <span class="label uiux">UI/UX</span>
           </p>
-          <h2>Made With:</h2>
+          <h2>Tools Used: </h2>
           <p>
             <span class="label unity">Unity</span>
           </p>
@@ -165,7 +165,7 @@
             <span class="label programmer">Programmer</span>
             <span class="label level-design">Level Design</span>
           </p>
-          <h2>Made With:</h2>
+          <h2>Tools Used: </h2>
           <p>
             <span class="label unity">Unity</span>
           </p>
@@ -198,7 +198,7 @@
           <p>
             <span class="label programmer">Programmer</span>
           </p>
-          <h2>Made With:</h2>
+          <h2>Tools Used: </h2>
           <p>
             <span class="label unity">Unity</span>
           </p>
@@ -235,7 +235,7 @@
           <p>
             <span class="label programmer">Programmer</span>
           </p>
-          <h2>Made With:</h2>
+          <h2>Tools Used: </h2>
           <p>
             <span class="label python">Python</span>
             <span class="label pandas">pandas Library</span>
@@ -270,7 +270,7 @@
             <span class="label programmer">Programmer</span>
             <span class="label uiux">UI/UX</span>
           </p>
-          <h2>Made With:</h2>
+          <h2>Tools Used: </h2>
           <p>
             <span class="label java">Java</span>
             <span class="label java-swing">Java Swing Library</span>
@@ -304,7 +304,7 @@
             <span class="label programmer">Programmer</span>
             <span class="label designer">Design</span> 
           </p>
-          <h2>Made With:</h2>
+          <h2>Tools Used: </h2>
           <p>
             <span class="label unity">Unity</span>
           </p>
@@ -335,7 +335,7 @@
             <span class="label programmer">Programmer</span>
             <span class="label artist">Artist</span> 
           </p>
-          <h2>Made With:</h2>
+          <h2>Tools Used: </h2>
           <p>
             <span class="label unity">Unity</span>
           </p>
