Added github link to a project
- github link added to TicTacToe Project

--- a/index.html
+++ b/index.html
@@ -268,7 +268,6 @@
           <h2>Role:</h2>
           <p>
             <span class="label programmer">Programmer</span>
-            <span class="label uiux">UI/UX</span>
           </p>
           <h2>Tools Used: </h2>
           <p>
@@ -276,8 +275,7 @@
             <span class="label java-swing">Java Swing Library</span>
           </p>
           <h1>Download From:</h1>
-          <p>github link coming soon</p>
-          <!-- <p><a href="https://itch.io/jam/jamboree/rate/2482749" target="_blank">github</a></p> -->
+          <p><a href="https://github.com/jychen0/TicTacToeVariants" target="_blank">github</a></p>
         </div>
         <!-- Starbound Wanderers-->
         <!-- <div class="work" id="starboundWanderers">
