--- a/index.html
+++ b/index.html
@@ -321,8 +321,7 @@
               <b>Team: TBD</b> 
             </span>
             <p class="body-text">
-              A 2D platformer where you have to escape from the bank within the allocated 5 minute timer while dodging guards and 
-              lasers. The player will also have to collect keycards that spell out 'ESCAPE!' to unlock the doors of each room
+              Unreleased (WIP)
             </p>
             <img alt="more-info" src="images/circle-x.png" onclick="closemoreinfo('sunnyside-travels', 'sunnyside-travels-info')"> 
           </div>
