--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 </head>
 <body class="main-content">
 <div id="header">
-  <div class="container">
+  <div class="container-navbar">
     <nav>
       <img src="images/BANANAS.png" class="logo">
       <ul id="sideMenu">
-        <li><a href="#header">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="projects.html">Projects</a></li>
         <li><a href="images/Jason Chen - Resume (1_26_2024).pdf" target="_blank" >Resume</a></li>
         <li><a href="#contact">Contact</a></li>
         <i class="fa-solid fa-bars" onclick="closeMenu()"></i>
@@ -42,307 +42,6 @@
     </div>
   </div>
 </div>
-<!-- -------------about------------------ -->
-<div id="about">
-  <div class="container">
-    <div class="about-row">
-      <div class="about-col-1">
-        <h1 class="sub-title">About Me</h1>
-        <img src="images/user-1.jpg">
-      </div>
-      <div class="about-col-2">
-        <p>Hi! My name is Jason Chen, and I'm a 19 year old sophomore at Clark University. I am an aspiring game developer studying Interactive Media 
-           Design and Computer Science in university. I was born in China but have lived in the Boston area since I was one year old. I started gaming
-           at a young age with Pokemon Platinum but quickly realized it was much more than a hobby. This led me down the path of game development because
-           I think games are a great way to connect people, and it has been a very important part of my life. I am currently working on an undisclosed project
-           that I am looking for help on, and if you would like to learn more, shoot me a message!
-
-          <br><br>
-          My favorite games include League of Legends, Teamfight Tactics, It Takes Two, Stardew Valley, Kirby's Return to Dreamland, and most Pokemon games
-          before Sword and Shield. I have been to two esports events in my life, one of them being the League of Legends Worlds 2023 Finals which just happened
-          to land on my birthday. 
-          <br><br>
-          Outside of gaming, I have an interest in transportation and know way too many random facts about airplanes (as you can see
-          with my favorite museum, the USS Intrepid, in the background of my photo). My goal is to make a game that is able to connect so many people and communities
-          the way some of my favorite games have done. I also love the idea of traveling and exploring the world in the future. 
-        </p>
-
-        <div class="tab-titles">
-          <b class="tab-links active-link" onclick="opentab('skills')">Skills</b>
-          <b class="tab-links" onclick="opentab('experience')">Experience</b>
-          <b class="tab-links" onclick="opentab('education')">Education</b>
-        </div>
-        <div class="tab-contents active-tab" id="skills">
-          <ul>
-            <li><span><b>Programming</b></span><br>Java<br>Python<br>C#<br>C++<br>JavaScript</li>
-            <li><span><b>Game Development</b></span><br>Unity<br>Unreal Engine</li>
-          </ul>
-        </div>
-        <div class="tab-contents" id="experience">
-          <ul>
-            <li><span><b>Oct 2021 - Present</b></span><br>Private AP Computer Science A Tutor</li>
-            <li><span><b>Mar 2022 - Aug 2023; Seasonal</b></span><br>Cashier/Barista at Paris Baguette</li>
-          </ul>
-        </div>
-        <div class="tab-contents" id="education">
-          <ul>
-            <li><span><b>2023 - 2026 Clark University</b></span><br>B.A. in Interactive Media<br>B.A. in Computer Science</li>
-            <li><span><b>2021 - 2023 Bunker Hill Community College</b></span><br>Dual Enrollment Program</li>
-            <li><span><b>2019 - 2023 Malden High School</b></span><br>High School Diploma</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- ----------------------- projects ----------------------------- -->
-<div id="projects">
-  <div class="container">
-    <h1 class="sub-title">Projects</h1>
-    <div class="projects-row">
-      <div class="work-list">
-        <!-- Bellicose -->
-        <div class="work" id="bellicoseGame">
-          <img src="images/Bellicose_Start.png">
-          <div class="layer active" id="bellicose">
-            <h3>Bellicose</h3>
-            <img alt="more-info" src="images/info-circle.png" onclick="openmoreinfo('bellicose', 'bellicose-info')">  
-          </div>
-          <div class="overlay-layer false" id="bellicose-info">
-            <h3 class="heading">Bellicose</h3> 
-            <span class="subheading">
-              <b>Team: Blake Shea, Sean McDowell, Anthony Pansenko, Liam Quinn</b> 
-            </span>
-            <p class="body-text">
-              A 2D local multi-player fighting game utilizing pixel art graphics. I worked on the character select screen and
-              UI/UX for the main combat screen. This was one of my first projects where I was not the sole programmer, which taught me 
-              the challenges of merging code and ways to fix it. 
-              <br><br> 
-              This game was made for the Clark University IGDA's 48 Hour Feburary 2024 Game Jam with a theme of 'Retro'.
-            </p>
-            <img alt="more-info" src="images/circle-x.png" onclick="closemoreinfo('bellicose', 'bellicose-info')">  
-          </div>
-        </div>
-        <div class="description" id="bellicoseGame">
-          <h2>Role:</h2>
-          <p>
-            <span class="label programmer">Programmer</span>
-            <span class="label uiux">UI/UX</span>
-          </p>
-          <h2>Tools Used: </h2>
-          <p>
-            <span class="label unity">Unity</span>
-          </p>
-          <h1>Download From:</h1>
-          <p><a href="https://itch.io/jam/february-frenzy/rate/2537343" target="_blank">itch.io</a></p>
-        </div>
-        <!-- Don't Feed The Duck -->
-        <div class="work" id="duckGame">
-            <img src="images/Duck_Game_Start.png">
-            <div class="layer active" id="duck-game">
-              <h3>Don't Feed The Duck</h3>
-              <img alt="more-info" src="images/info-circle.png" onclick="openmoreinfo('duck-game', 'duck-game-info')">  
-            </div>
-            <div class="overlay-layer false" id="duck-game-info">
-              <h3 class="heading">Don't Feed The Duck</h3> 
-              <span class="subheading">
-                <b>Team: Alexander Costley, Jacob Berman, Aiden Morrison, Gage Delgado</b> 
-              </span>
-              <p class="body-text">
-                A 2D platformer with two levels. The first level is mainly a casual level for exploration and learning the mechanics. 
-                The second level is a challenge run designed to be difficult and for speedrunners. This was my first every game project 
-                and taught me a lot about working with a team and with Unity. 
-                <br><br> 
-                This game was made for my final project in my 'Game Design Fundamentals' class in Fall 2023
-              </p>
-              <img alt="more-info" src="images/circle-x.png" onclick="closemoreinfo('duck-game', 'duck-game-info')">  
-            </div>
-        </div>
-        <div class="description" id="duckGame">
-          <h2>Role:</h2>
-          <p>
-            <span class="label programmer">Programmer</span>
-            <span class="label level-design">Level Design</span>
-          </p>
-          <h2>Tools Used: </h2>
-          <p>
-            <span class="label unity">Unity</span>
-          </p>
-          <h1>Download From:</h1>
-          <p><p><a href="https://legendarybanana.itch.io/dont-feed-the-duck" target="_blank">itch.io</a></p></p>
-        </div>
-        <!-- Escape Alex Bank -->
-        <div class="work" id="alexBank">
-          <img src="images/Escape_Alex_Bank_Start.png">
-          <div class="layer active" id="alex-bank">
-            <h3>Escape Alex Bank</h3>
-            <img alt="more-info" src="images/info-circle.png" onclick="openmoreinfo('alex-bank', 'alex-bank-info')">  
-          </div>
-          <div class="overlay-layer false" id="alex-bank-info">
-            <h3 class="heading">Escape Alex Bank</h3> 
-            <span class="subheading">
-              <b>Team: Pablo Acosta, Zander Day, Scott Vagnini, Charles Weiller, Jacob Berman</b> 
-            </span>
-            <p class="body-text">
-              A 2D platformer where you have to escape from the bank within the allocated 5 minute timer while dodging guards and 
-              lasers. The player will also have to collect keycards that spell out 'ESCAPE!' to unlock the doors of each room
-              <br><br>
-              This game was made for the Clark University IGDA's 48 Hour January 2024 Game Jam with a theme of 'Escape'.
-            </p>
-            <img alt="more-info" src="images/circle-x.png" onclick="closemoreinfo('alex-bank', 'alex-bank-info')"> 
-          </div>
-        </div>
-        <div class="description" id="alexBank">
-          <h2>Role:</h2>
-          <p>
-            <span class="label programmer">Programmer</span>
-          </p>
-          <h2>Tools Used: </h2>
-          <p>
-            <span class="label unity">Unity</span>
-          </p>
-          <h1>Download From:</h1>
-          <p><a href="https://itch.io/jam/jamboree/rate/2482749" target="_blank">itch.io</a></p>
-        </div>
-        <!-- Riot Games API-->
-        <div class="work" id="riotGamesAPI">
-          <img src="images/riot_api_project_code.png">
-          <div class="layer active" id="riot-games-api">
-            <h3>Riot Games API Stats Tool</h3>
-            <img alt="more-info" src="images/info-circle.png" onclick="openmoreinfo('riot-games-api', 'riot-games-api-info')">
-          </div>
-          <div class="overlay-layer false" id="riot-games-api-info">
-            <h3 class="heading">Riot Games API Stats Tool</h3>
-            <span class="subheading">
-              <b>Individual</b> 
-            </span>
-            <p class="body-text">
-              A project utilizing the Riot Games API for League of Legends, this tool will request for you to enter a player's ID and 
-              tagline, a region, the specific queue you want to search (on summoners rift), and the amount of games you want to search.
-              It then grabs all the data from those games and then puts them into a .csv file that you can upload onto google sheets. 
-              After this, it will prompt you to see if you want to see graphs of some of the data or not.
-              <br><br>
-              This project was made for my CSCI 120 class and then utilized for the Clark University Esports Team and also my own data tracking
-              <br><br>
-              A google sheets template for your own data tracking is a WIP and will be added to the github repository once it is done.
-            </p>
-            <img alt="more-info" src="images/circle-x.png" onclick="closemoreinfo('riot-games-api', 'riot-games-api-info')"> 
-          </div>
-        </div>
-        <div class="description" id="riotGamesAPI">
-          <h2>Role:</h2>
-          <p>
-            <span class="label programmer">Programmer</span>
-          </p>
-          <h2>Tools Used: </h2>
-          <p>
-            <span class="label python">Python</span>
-            <span class="label pandas">pandas Library</span>
-          </p>
-          <h1>Download From:</h1>
-          <p>github link coming soon</p>
-          <!-- <p><a href="#" target="_blank">github</a></p> -->
-        </div>
-        <!-- Tic-tac-toe -->
-        <div class="work" id="ticTacToe">
-          <img src="images/tictactoeMenu.png">
-          <div class="layer active" id="tic-tac-toe">
-            <h3>TicTacToe Varients</h3>
-            <img alt="more-info" src="images/info-circle.png" onclick="openmoreinfo('tic-tac-toe', 'tic-tac-toe-info')">
-          </div>
-          <div class="overlay-layer false" id="tic-tac-toe-info">
-            <h3 class="heading">TicTacToe Varients</h3>
-            <span class="subheading">
-              <b>Individual</b> 
-            </span>
-            <p class="body-text">
-              This projects compiles all the versions of tic-tac-toe that I have thought of, especially the one I think is the
-              most fun, three-at-a-time. This project allows you to choose which of these variants to play with a friend in-person. 
-
-            </p>
-            <img alt="more-info" src="images/circle-x.png" onclick="closemoreinfo('tic-tac-toe', 'tic-tac-toe-info')"> 
-          </div>
-        </div>
-        <div class="description" id="ticTacToe">
-          <h2>Role:</h2>
-          <p>
-            <span class="label programmer">Programmer</span>
-          </p>
-          <h2>Tools Used: </h2>
-          <p>
-            <span class="label java">Java</span>
-            <span class="label java-swing">Java Swing Library</span>
-          </p>
-          <h1>Download From:</h1>
-          <p><a href="https://github.com/jychen0/TicTacToeVariants" target="_blank">github</a></p>
-        </div>
-        <!-- Starbound Wanderers-->
-        <!-- <div class="work" id="starboundWanderers">
-          <p><img src="images/starbound-wanderers-temp.png"></p>
-          <div class="layer active" id="starbound-wanderers">
-            <h3>Starbound Wanderers (WIP)</h3>
-            <img alt="more-info" src="images/info-circle.png" onclick="openmoreinfo('starbound-wanderers', 'starbound-wanderers-info')">  
-          </div>
-          <div class="overlay-layer false" id="starbound-wanderers-info">
-            <h3 class="heading">Starbound Wanderers (WIP)</h3> 
-            <span class="subheading">
-              <b>Team: TBD</b> 
-            </span>
-            <p class="body-text">
-              A 2D platformer where you have to escape from the bank within the allocated 5 minute timer while dodging guards and 
-              lasers. The player will also have to collect keycards that spell out 'ESCAPE!' to unlock the doors of each room
-            </p>
-            <img alt="more-info" src="images/circle-x.png" onclick="closemoreinfo('sunnyside-travels', 'sunnyside-travels-info')"> 
-          </div>
-        </div>
-        <div class="description" id="sunnysideTravelsInfo">
-          <h2>Role:</h2>
-          <p>
-            <span class="label programmer">Programmer</span>
-            <span class="label designer">Design</span> 
-          </p>
-          <h2>Tools Used: </h2>
-          <p>
-            <span class="label unity">Unity</span>
-          </p>
-          <h1>Download From:</h1>
-          <p>(WIP)</p> -->
-        <!-- Sunnyside Travels -->
-        <div class="work" id="sunnysideTravels">
-          <p><img src="images/sunnyside-travels-temp.png"></p>
-          <div class="layer active" id="sunnyside-travels">
-            <h3>Sunnyside Travels (WIP)</h3>
-            <img alt="more-info" src="images/info-circle.png" onclick="openmoreinfo('sunnyside-travels', 'sunnyside-travels-info')">  
-          </div>
-          <div class="overlay-layer false" id="sunnyside-travels-info">
-            <h3 class="heading">Sunnyside Travels (WIP)</h3> 
-            <span class="subheading">
-              <b>Team: TBD</b> 
-            </span>
-            <p class="body-text">
-              Unreleased (WIP)
-            </p>
-            <img alt="more-info" src="images/circle-x.png" onclick="closemoreinfo('sunnyside-travels', 'sunnyside-travels-info')"> 
-          </div>
-        </div>
-        <div class="description" id="sunnysideTravelsInfo">
-          <h2>Role:</h2>
-          <p>
-            <span class="label programmer">Programmer</span>
-            <span class="label artist">Artist</span> 
-          </p>
-          <h2>Tools Used: </h2>
-          <p>
-            <span class="label unity">Unity</span>
-          </p>
-          <h1>Download From:</h1>
-          <p>(WIP)</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 
 <!-- --------------------contact----------------------- -->
 <div id="contact">
@@ -357,16 +56,7 @@
           <a href="https://www.linkedin.com/in/jason-chen-8850a0289/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
           <a href="https://github.com/jychen0"><i class="fa-brands fa-github"></i></a>
         </div>
-        <a href="images/Jason Chen - Resume (1_26_2024).pdf" download class="btn btn2">Download Resume</a>
-      </div>
-      <div class="contact-right">
-        <form name="submit-to-google-sheet">
-          <input type="text" name="Name" placeholder="Your Name" required>
-          <input type="email" name="Email" placeholder="Your Email" required>
-          <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
-          <button type="submit" class="btn btn2">Submit</button>
-        </form>
-        <span id="msg"></span>
+        <a href="images/Jason Chen - Resume (5_26_2024).pdf" download class="btn btn2">Download Resume</a>
       </div>
     </div>
   </div>
